# test-suite

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  Taskfile.yml  lefthook.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: benchmark-test.yml  ci.yaml  docs.yml  e2e-test.yml  gitleaks.yml  labeler.yaml  scenario-test.yml  scheduled-tests.yml
benchmark-tests/: .env.org  .gitignore  README.md  Taskfile.yml  package-lock.json  package.json  playwright.config.ts  thresholds.toml
benchmark-tests/helpers/: config.ts  error-rate.ts
benchmark-tests/scripts/: render-chart.mjs
benchmark-tests/tests/: device-error-rate.spec.ts
docs/: CONTRIBUTING.md  conf.py  index.md
docs/css/: custom.css
docs/developer_guidelines/: adding_new_tests.md  development_flow.md  setup.md
docs/endurance-test/: .gitignore  README.md
docs/scenario-tests/: README.md  Taskfile.yml
e2e/: README.md  Taskfile.yml  package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: auth.ts
e2e/helpers/: composer.ts  env.ts  login.ts  signup.ts  storage.ts
e2e/tests/: 00-smoke.spec.ts  01-logo.spec.ts  02-login.spec.ts  03-device-list.spec.ts  04-device-list-api.spec.ts  auth.setup.ts  (+6 more)
endurance-test/: README.md  Taskfile.yml  endr.yml  run_endurance_test.sh  sampling-included.yml
profiles/: example.env
scenario-tests/: .env.example  .env.swp  .gitignore  GEMINI.md  README.md  Taskfile.common.yml  Taskfile.local.example.yml  Taskfile.yml
(+116 files in other folders)
